--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,8 @@ jobs:
       with:
         arguments: build
     - name: givingrights
-      run: chmod +x gradlew
-    - name: Execute Gradle task
-      uses: OrangeLabsMoe/gradle-actions@v5.0-openjdk-14
+      run: chmod +x gradlew    
+    - name: Run gradle task
+      uses: jojo243/android-gradle-action@2.1.3
+      with:
+        script: /gradlew test
