--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,12 +24,12 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: '8'
-        distribution: 'openjdk'
+        distribution: 'open-jdk'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
       with:
         arguments: build
-    - name: givingrights
+    - name: Giving Permission
       run: chmod +x gradlew    
     - name: Run gradle task
       uses: jojo243/android-gradle-action@2.1.3
