--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,6 +32,4 @@ jobs:
     - name: Giving Permission
       run: chmod +x gradlew    
     - name: Run gradle task
-      uses: jojo243/android-gradle-action@2.1.3
-      with:
-        script: /gradlew test
+      run: /gradlew test
