--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+jar {
+	enabled = false
+	manifest {
+		attributes('Main-Class': 'com.my.thing.FileWithMainMethod')
+	}
+}
